Support SDL2 and use OGG format for wasm/emscripten.

--- a/sdl/Makefile
+++ b/sdl/Makefile
@@ -1,5 +1,6 @@
+SDL_VERSION     = 2
 SYSTEM_TYPE = $(shell uname -m)
-USE_OPENGL	= yes
+ifeq (${SDL_VERSION},1)
 ROM_FILES	= sound/applause.mp3 sound/balldrop.mp3 sound/beep11.mp3
 ROM_FILES	+= sound/boing1.mp3 sound/zip.mp3 sound/sonarbeep.mp3
 ROM_FILES	+= sound/explosion.mp3
@@ -8,8 +9,14 @@ ROM_FILES	+= sound/explosion.mp3
 #ROM_FILES	+= resources/beastwars.png
 #sound/blipblop.mp3
 #ROM_FILES	+= $(filter-out levels/CVS,$(wildcard levels/*))
+endif
 
+ifeq (${SDL_VERSION},1)
 SDL_CONFIG	?= sdl-config
+endif
+ifeq (${SDL_VERSION},2)
+SDL_CONFIG	?= sdl2-config
+endif
 
 BIN		= ballion$(EXTENSION)
 # Playstation 2 only
@@ -18,55 +25,76 @@ BIN		= ballion$(EXTENSION)
 # SDL only:
 OBJDIR		= sdl-obj
 MODS		= sdl/sdl_graphic
-MODS		+= main tiles bmpreader
-MODS		+= ball board level waveformat mp3loader audio
-#MODS		+= jpgloader # jpeg not needed
+MODS		+= main tiles
+MODS		+= ball board level audio
+ifeq (${SDL_VERSION},1)
 MODS		+= $(subst .,_,$(notdir $(ROM_FILES)))
-MODS		+= pngloader rom font menu sdl/gamecontrol
+endif
+ifeq (${SDL_VERSION},1)
+MODS		+= waveformat mp3loader
+MODS		+= pngloader
+MODS		+= bmpreader
+#MODS		+= jpgloader # jpeg not needed
+MODS		+= rom
+endif
+MODS		+= font menu sdl/gamecontrol
 MODS		+= sdl/utils
 OBJS		= $(addprefix $(OBJDIR)/, $(addsuffix .o, $(MODS)))
 LIBS		= -lm
-LIBS		+= -L$(HOME)/mysrc/local/lib -lmad
+ifeq (${SDL_VERSION},1)
+LIBS		+= -lmad
+endif
 LIBS		+= -lpthread
 ifeq ($(DEBUG),yes)
 CFLAGS		+= -DDEBUG
 CXXFLAGS	+= -DDEBUG
 endif
-CFLAGS		+= -g -O2 -DSDL_MODE $(shell $(SDL_CONFIG) --cflags) #-pg
+CFLAGS		+= -g -O2 -DSDL_MODE $(shell $(SDL_CONFIG) --cflags)
+CXXFLAGS	+= -g -O2 -DSDL_MODE $(shell $(SDL_CONFIG) --cflags)
+ifeq (${SDL_VERSION},1)
+CFLAGS		+= -DSDL_AUDIO
+CXXFLAGS	+= -DSDL_AUDIO
+endif
+ifeq (${SDL_VERSION},2)
+CFLAGS		+= -DUSE_SDL2=1 -DSDL_MIX
+CXXFLAGS	+= -DUSE_SDL2=1 -DSDL_MIX
+endif
 CFLAGS		+= -I. -Isdl -W -Wall
 ifneq ($(CROSS),)
 # Cross-Compiling
 ifneq ($(PNDSDK),)
+USE_OPENGL	 = yes
 # Crosscompiling for Pandora.
 CFLAGS		+= -I$(PNDSDK)/usr/include
 CXXFLAGS	+= -I$(PNDSDK)/usr/include
-CFLAGS		+= -DPANDORA -DGLES1 -DUSE_OPENGL
-CXXFLAGS	+= -DPANDORA -DGLES1 -DUSE_OPENGL
+CFLAGS		+= -DPANDORA -DGLES1
+CXXFLAGS	+= -DPANDORA -DGLES1
 LIBS		+= -lGLES_CM
 LIBS		+= -lX11 -lEGL
-else
-ifeq ($(USE_OPENGL),yes)
-LIBS		+= -lGL
-endif
 endif
 else
 # Compiling native
 ifeq ($(SYSTEM_TYPE),armv7l)
 # Compiling on Open Pandora
+USE_OPENGL       = yes
 CFLAGS		+= -I$(HOME)/mysrc/local/include
-CFLAGS		+= -DPANDORA -DGLES1 -DUSE_OPENGL
-CXXFLAGS	+= -DPANDORA -DGLES1 -DUSE_OPENGL
+CFLAGS		+= -DPANDORA -DGLES1
+CXXFLAGS	+= -DPANDORA -DGLES1
 LIBS		+= -lGLES_CM
 LIBS		+= -lX11 -lEGL
-else
-ifeq ($(USE_OPENGL),yes)
-LIBS		+= -lGL
 endif
 endif
-endif
-CXXFLAGS	+= -g -O2 -DSDL_MODE $(shell $(SDL_CONFIG) --cflags) #-pg
 CXXFLAGS	+= -I. -Isdl -W -Wall
-LIBS		+= -lpng $(shell $(SDL_CONFIG) --libs) -lSDL_gfx #-pg
+ifeq (${SDL_VERSION},1)
+LIBS		+= -lpng
+endif
+LIBS		+= $(shell $(SDL_CONFIG) --libs)
+ifeq (${SDL_VERSION},1)
+LIBS		+= -lSDL_gfx
+endif
+ifeq (${SDL_VERSION},2)
+LIBS		+= -lSDL2_mixer -lSDL2_image
+endif
 ifneq ($(CROSS),)
 HOSTCC		= gcc
 else
@@ -75,6 +103,7 @@ endif
 ifeq ($(USE_OPENGL),yes)
 CFLAGS		+= -DUSE_OPENGL
 CXXFLAGS	+= -DUSE_OPENGL
+LIBS		+= -lGL
 endif
 
 all: $(BIN)
@@ -101,7 +130,9 @@ clean:
 	rm -f romfilelist.h
 	rm -f romdefinitions.h
 	rm -f rominitialize.h
+ifeq (${SDL_VERSION},1)
 	rm -f $(addsuffix .s,$(subst .,_,$(notdir $(ROM_FILES))))
+endif
 
 $(OBJDIR)/rom.o: rom.c romfilelist.h romdefinitions.h rominitialize.h
 
@@ -140,6 +171,7 @@ bin2s: bin2s.c
 %.s: bin2s levels/%
 	./bin2s $(filter-out bin2s,$^) $@ $*
 
+ifeq (${SDL_VERSION},1)
 romfilelist.h:
 	rm -f romfilelist.h
 	for file in $(ROM_FILES); do \
@@ -160,4 +192,5 @@ rominitialize.h:
 		echo "rom_files[i].size = size_$$file;" >> rominitialize.h; \
 		echo "i++;" >> rominitialize.h; \
 	done
+endif
 
